<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.k8049.exercise02.LoginActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/first_name" />

            <AutoCompleteTextView
                android:id="@+id/inputLogin"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/password" />

            <EditText
                android:id="@+id/inputPass"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </TableRow>

        <Button
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="onLoginClick"
            android:text="@string/login" />
    </TableLayout>
</RelativeLayout>
