<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.k8049.exercise02.MapActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_coordinates"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/inputLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLatitude"
        android:layout_marginTop="26dp"
        android:hint="@string/longitude"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonShowMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLongitude"
        android:layout_marginTop="26dp"
        android:onClick="onShowMapClick"
        android:text="@string/show_map" />
</RelativeLayout>
